# fictional-fortnight

./: .gitignore  AGENTS.md  codemap.md  pyproject.toml
configs/: codemap.md  f16c64_vae_dit_proj_out_align.yaml  f16c64_vae_x_embbder_align.yaml
configs/data_config/: codemap.md  infer_simple_dataset.yaml
configs/flareseg/: train_fpn_flickr_flare7kpp.yaml
configs/model_config/: SR_nch_v2.1_ti2i_with_guidance_local_attn.yaml  SR_nch_v2_ti2i_with_guidance.yaml  SR_nch_v2_ti2i_with_guidance_60.yaml  SR_nch_v3_ti2i_with_guidance.yaml  SR_nch_v3_ti2i_with_guidance_f16c64.yaml  SR_nch_v3_ti2i_with_guidance_x_embedder_only.yaml  SR_nch_v3_ti2i_with_guidance_x_embedder_only_f16c64.yaml  codemap.md  nch_v3_ti2i_100per.yaml
configs/network_config/: codemap.md  ldm_nch_v3.yaml
configs/test/: codemap.md  tiny_dmd_two_phase.yaml  tiny_gradient_checkpointing.yaml  tiny_mixed_fsdp2.yaml  tiny_regression.yaml  tiny_save_submodule.yaml  tiny_save_submodule_fsdp2.yaml
framework/: __init__.py  codemap.md  components.py  config.py  context.py  distributed.py  engine.py  instantiate.py  loggers.py  losses.py  optim.py  phase_runner.py  registry.py  resolver.py  train.py  utils.py
framework/ops/: __init__.py  codemap.md  common.py  diffusion.py
models/: __init__.py  fpn.py  repvit_m.py
projects/: __init__.py
scripts/: infer_flareseg.py  prepare_flareseg_dataset.py  upload_flareseg_dataset.py  visualize_flareseg_samples.py
test_assets/: __init__.py  data.py  losses.py  models.py
tests/: __init__.py  test_flareseg_project.py  test_smoke_training.py
(+9 files in other folders)
