[project]
name = "futuretrainer"
version = "0.1.0"
description = "AI Trainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.38.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "omegaconf>=2.3.1",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "safetensors>=0.8.0",
    "scipy>=1.15.3",
    "setuptools<82",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch==2.9.0",
    "torchvision>=0.22.0",
]


[dependency-groups]
npu = ["torch_npu", "decorator", "psutil", "scipy", "attrs"]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
